--- a/less/boon-sheet.less
+++ b/less/boon-sheet.less
@@ -11,10 +11,15 @@
         .boon-line{
             display: flex;
             flex-direction: row;
+            font-family: @long-text-font;
+            font-size: @long-text-font-size;
             .boon-block{
                 display: flex;
                 flex-direction: row;
                 flex-basis: 50%;
+                .label-dev{
+                    padding-top: 0.4em;
+                }
             }
         }
     }
