--- a/less/item-sheet.less
+++ b/less/item-sheet.less
@@ -9,6 +9,8 @@
         width: 100%;
         background:@edit-background;
         box-shadow: inset 0 0 6px black;
+        font-family: @long-text-font;
+        font-size: @long-text-font-size;
     }
     input{
         background-color: @edit-background;
