--- a/templates/actor/tab/boons.html
+++ b/templates/actor/tab/boons.html
@@ -11,7 +11,7 @@
                 <div class="boon-name-line">
                     {{#if ../isPlayer}}
                         {{#if item.data.developed}}
-                            <i class="{{getCheckboxIcon  item.data.developed}}"></i>
+                            <i class="boxicon {{getCheckboxIcon  item.data.developed}}"></i>
                         {{/if}}
                     {{/if}}                        
                     <div class="boon-name">{{item.name}}</div>
