:lipstick: equipment icons

--- a/less/tab/player-equipment.less
+++ b/less/tab/player-equipment.less
@@ -21,6 +21,14 @@
             justify-content: left;
             margin: 0.3em 0.3em 0 0.3em;
             border-bottom: 1px solid @title-color;
+            .image-container{
+                background-size: 26px;
+                background-repeat: no-repeat;
+                height: 26px;
+                width: 26px;
+                align-self:center;
+                object-fit: contain;
+            }
             .equipment-name{
                 font-family: @long-text-font;
                 font-size: @long-text-font-size;
