--- a/cleenmain.css
+++ b/cleenmain.css
@@ -629,6 +629,14 @@ input {
   margin: 0.3em 0.3em 0 0.3em;
   border-bottom: 1px solid black;
 }
+.equipment-tab .equipment-column .equipment-line .image-container {
+  background-size: 26px;
+  background-repeat: no-repeat;
+  height: 26px;
+  width: 26px;
+  align-self: center;
+  object-fit: contain;
+}
 .equipment-tab .equipment-column .equipment-line .equipment-name {
   font-family: "Merriweather";
   font-size: 0.7rem;
