--- a/less/weapon-sheet.less
+++ b/less/weapon-sheet.less
@@ -1,19 +1,12 @@
 .cleenmain.sheet.item {
-    form {
-        display: flex;
-        flex-direction: column;
+    .weapon-table1{
+        text-align: center;
+
     }
     .sheet-content {
         height: 100%;
         display: flex;
         flex-direction: column;
         
-        select{
-            margin: 0 .5em 0 0;
-        }
-        .boon-line{
-            display: flex;
-            flex-direction: row;
-        }
     }
 }
