--- a/less/item-sheet.less
+++ b/less/item-sheet.less
@@ -1,4 +1,8 @@
 .cleenmain.sheet.item {
+    form {
+        display: flex;
+        flex-direction: column;
+    }
     .window-content {
         background: @itemsheet-background;
         background-color: @clear-background;
@@ -21,6 +25,7 @@
         background-color: @edit-background;
         box-shadow: inset 0 0 3px black;
         height: 1.5em;
+        margin: 0 .5em 0 0;
     }
     input:focus {
         background-color: @editactive-background;
