--- a/templates/item/armor.html
+++ b/templates/item/armor.html
@@ -10,10 +10,9 @@
                     <th>{{localize "CLEENMAIN.label.category"}}</th>
                     <th>{{localize "CLEENMAIN.armor.protection"}}</th>
                     <th>{{localize "CLEENMAIN.armor.malus"}}</th>
-                    <th>{{localize "CLEENMAIN.armor.special"}}</th>
-                    <th>{{localize "CLEENMAIN.armor.quality"}}</th>
                 </tr>
             </thead> 
+            <tr>
             <td>
                 <select name="data.category">
                     {{#select data.category}}
@@ -29,14 +28,20 @@
             <td>
                 <input name="data.malus" type="number" value="{{data.malus}}" />
             </td>
-            <td>
-                <input name="data.special" type="text" value="{{data.special}}" />
-            </td>
-            <td>
-                <input name="data.quality" type="text" value="{{data.quality}}" />
-            </td>
+            </tr>
             </table>
-            
+            <table>
+                <thead> 
+                    <tr>
+                        <th>{{localize "CLEENMAIN.armor.special"}}</th>
+                    </tr>
+                </thead> 
+                <tr>
+                    <td>
+                        <input name="data.special" type="text" value="{{data.special}}" />
+                    </td>
+                </tr>
+            </table>
             <div class="description">{{localize "CLEENMAIN.label.description"}}</div>
             {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
     </div>
