--- a/templates/actor/npc.html
+++ b/templates/actor/npc.html
@@ -9,7 +9,7 @@
                     <div class="name-text">{{actor.name}}</div>
                     {{/if}}
                     <div class="right-icon">
-                        <a class="sheet-unlock" title="{{localize "CLEENMAIN.label.unlock_sheet"}}">
+                        <a class="sheet-change-lock" title="{{localize "CLEENMAIN.label.unlock_sheet"}}">
                             {{#if unlocked}}
                                 <i class="fas fa-lock-open"></i>
                             {{else}}
