--- a/less/npc-sheet.less
+++ b/less/npc-sheet.less
@@ -53,7 +53,7 @@
                     input{
                         height: 2em;
                     }
-                    .sheet-unlock{
+                    .sheet-change-lock{
                         margin-left: auto;
                         padding-left: 1em;
                         color: @icon-color;
