--- a/templates/combat/combat-tracker.html
+++ b/templates/combat/combat-tracker.html
@@ -33,8 +33,8 @@
             {{/if}}
 
             {{#if combatCount}}
-            {{#if combat.data.round}}
-            <h3 class="encounter-title">{{localize 'COMBAT.Round'}} {{combat.data.round}}</h3>
+            {{#if combat.round}}
+            <h3 class="encounter-title">{{localize 'COMBAT.Round'}} {{combat.round}}</h3>
             {{else}}
             <h3 class="encounter-title">{{localize 'COMBAT.NotStarted'}}</h3>
             {{/if}}
@@ -73,6 +73,11 @@
                     
                     <a class="act" style="margin: 0px 5px 0px 0px" {{#if this.hasActed}}title="Cliquer quand le tour n'a pas été joué"{{else}}title="Cliquer quand le tour a été joué" {{/if}}>
                         <i {{#if this.hasActed}} class="fas fa-fist-raised" style="color:green" {{else}} class="fas fa-fist-raised" style="color:gray" {{/if}}></i>
+                    </a>
+                    {{/if}}
+                    {{#if this.canPing}}
+                    <a class="combatant-control" title="{{localize 'COMBAT.PingCombatant'}}" data-control="pingCombatant">
+                        <i class="fa-solid fa-bullseye-arrow"></i>
                     </a>
                     {{/if}}
                     <div class="token-effects">
