:sparkles: dragndrop weapons on NPC sheet

--- a/templates/actor/npc.html
+++ b/templates/actor/npc.html
@@ -42,7 +42,7 @@
                     </div>
                     {{/if}}
                 </div>
-                <div class="weapons">
+                <div class="weapons droppable">
                     {{#if unlocked}}
                         <div class="weapon-line">
                             <div class="line-label">{{localize "CLEENMAIN.weapon.add"}}</div>
