--- a/less/npc-sheet.less
+++ b/less/npc-sheet.less
@@ -1,4 +1,16 @@
 .cleenmain.sheet.npc {
+    h1 {
+        font-family: @h1-font-family;
+        font-size: @h1-font-size;
+        color: @title-color;
+        text-transform: @h1-text-transform;
+        border: @h1-border;
+    }
+    h2 {
+        font-family: @h2-font-family;
+        font-size: @h1-font-size;
+        color: @title-color;
+    }
     .input-short{
         width: 2em;
     }
