--- a/cleenmain.css
+++ b/cleenmain.css
@@ -10,20 +10,20 @@
   font-family: "Merriweather";
   src: url("./assets/fonts/Merriweather-Regular.ttf");
 }
-h1 {
+input {
+  color: #456;
+}
+.cleenmain.sheet.player h1 {
   font-family: "Signika";
   font-size: 1.2rem;
   color: black;
   text-transform: uppercase;
   border: none;
 }
-h2 {
+.cleenmain.sheet.player h2 {
   font-family: "Signika";
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: black;
-}
-input {
-  color: #456;
 }
 .cleenmain.sheet.player .window-content {
   background: no-repeat url('../../../ui/parchment.jpg');
@@ -219,6 +219,18 @@ input {
   font-size: 1.2rem;
   color: #705a10;
 }
+.cleenmain.sheet.npc h1 {
+  font-family: "Signika";
+  font-size: 1.2rem;
+  color: black;
+  text-transform: uppercase;
+  border: none;
+}
+.cleenmain.sheet.npc h2 {
+  font-family: "Signika";
+  font-size: 1.2rem;
+  color: black;
+}
 .cleenmain.sheet.npc .input-short {
   width: 2em;
 }
@@ -363,6 +375,18 @@ input {
   width: 200px;
   height: 250px;
   object-fit: contain;
+}
+.cleenmain.sheet.item h1 {
+  font-family: "Signika";
+  font-size: 1.2rem;
+  color: black;
+  text-transform: uppercase;
+  border: none;
+}
+.cleenmain.sheet.item h2 {
+  font-family: "Signika";
+  font-size: 1.2rem;
+  color: black;
 }
 .cleenmain.sheet.item .window-content {
   background: repeat url('../../../ui/parchment-white.jpg');
