--- a/less/config.less
+++ b/less/config.less
@@ -53,18 +53,13 @@
 @chat-modifier-font-size: 0.9rem;
 @chat-end-height: 0px;
 
-h1 {
-    font-family: "Signika";
-    font-size: 1.2rem;
-    color: @title-color;
-    text-transform: uppercase;
-    border: none;
-}
-h2 {
-    font-family: "Signika";
-    font-size: 1rem;
-    color: @title-color;
-}
+@h1-font-family: "Signika";
+@h1-font-size: 1.2rem;
+@h1-text-transform: uppercase;
+@h1-border: none;
+
+@h2-font-family: "Signika";
+@h2-font-size: 1rem;
 
 input {
     color: @core-main-color;
@@ -72,6 +67,8 @@ input {
 
 //colors
 @title-color: black;
+@h1-color: black;
+@h2-color: black;
 @font-soft-color: #8e8d8d;
 @core-main-color: #456;
 @boon-color: black;
