:lipstick: meilleure gestion largeur de feuille PJ

--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -49,6 +49,7 @@
     .main {
         display: flex;
         flex-direction: row;
+        width: 100%;
         .leftcolumn {
             display: flex;
             flex-direction: column;
@@ -93,9 +94,9 @@
             }
         }
         .central {
-            flex-grow: 4;
             display: flex;
             flex-direction: column;
+            width: 100%;
             .intro-block{
                 display: flex;
                 flex-direction: row;
