--- a/less/tab/player-equipment.less
+++ b/less/tab/player-equipment.less
@@ -32,6 +32,8 @@
             .equipment-name{
                 font-family: @long-text-font;
                 font-size: @long-text-font-size;
+                padding-left: 0.5em;
+                align-self: center;
             }
             .icon-group{
                 margin-left: auto;
