--- a/less/tab/player-notes.less
+++ b/less/tab/player-notes.less
@@ -6,12 +6,15 @@
     font-size: @long-text-font-size;
     
   .editor{
-    min-height: @editor-height;
+    min-height: 200px;
+    max-height: 400px;
+    width:auto;
     .editor-content{
-      min-height: @editor-height;
+      min-height: 200px;
+      max-height: 400px;
     }
     .tox.tox-tinymce{
-      min-height: @editor-height * 2;
+      min-height: auto;
     }
   }
 }
