--- a/cleenmain.css
+++ b/cleenmain.css
@@ -63,6 +63,7 @@ input {
 .cleenmain.sheet.player .main {
   display: flex;
   flex-direction: row;
+  width: 100%;
 }
 .cleenmain.sheet.player .main .leftcolumn {
   display: flex;
@@ -108,9 +109,9 @@ input {
   width: 10%;
 }
 .cleenmain.sheet.player .main .central {
-  flex-grow: 4;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 .cleenmain.sheet.player .main .central .intro-block {
   display: flex;
@@ -538,6 +539,8 @@ input {
 .tab-bio .description-block {
   font-family: "Merriweather";
   font-size: 0.7rem;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
 }
 .tab-bio .traits-block {
   font-family: "Merriweather";
@@ -619,13 +622,16 @@ input {
   font-size: 0.7rem;
 }
 .notes-tab .editor {
-  min-height: 5em;
+  min-height: 200px;
+  max-height: 400px;
+  width: auto;
 }
 .notes-tab .editor .editor-content {
-  min-height: 5em;
+  min-height: 200px;
+  max-height: 400px;
 }
 .notes-tab .editor .tox.tox-tinymce {
-  min-height: 10em;
+  min-height: auto;
 }
 .equipment-tab {
   display: flex;
@@ -664,6 +670,8 @@ input {
 .equipment-tab .equipment-column .equipment-line .equipment-name {
   font-family: "Merriweather";
   font-size: 0.7rem;
+  padding-left: 0.5em;
+  align-self: center;
 }
 .equipment-tab .equipment-column .equipment-line .icon-group {
   margin-left: auto;
