:sparkles: display NPC portrait to players

--- a/templates/actor/npc.html
+++ b/templates/actor/npc.html
@@ -172,7 +172,7 @@
             </div>
             {{else}}
                 {{#if (ne actor.img "icons/svg/mystery-man.svg")}}
-                    <div class="npcstat-block-right">
+                    <div class="npcstat-block-right showimage">
                         <img src="{{actor.img}}" title="{{actor.name}}" />
                     </div>
                 {{/if}}
