--- a/templates/user_guide_fr.html
+++ b/templates/user_guide_fr.html
@@ -22,4 +22,6 @@
     </p>
     <h4>Jets d'attaque</h4>
     <p>Pour pouvoir attaquer avec une arme, vous devez d'abord indiquer quelle compéétence sera utilisée avec elle. Pour cela, en mode édition, cliquez sur la compétence et faite un glisser-déposer vers la ligne de l'arme.</p>
+    <h4>Montrer le portrait</h4>
+    <p>Cliquer sur le portrait d'un PnJ ouvre une fenêtre qui propose de montrer ce portrait à tous les joueurs et joueuses. Si validé, une fenetre s'affichera dans leurs écrans avec le portrait.</p>
 </div>
