--- a/templates/actor/tab/combat.html
+++ b/templates/actor/tab/combat.html
@@ -47,6 +47,7 @@
                     </tr>
             </thead>
             {{#each armors as |item id|}}  <tr class="item" data-item-id="{{_id}}"></tr>
+            {{#ife item.system.state "active"}}
                 <tr class="item" data-item-id="{{_id}}">
                     <th>{{name}}</th>
                     <th>{{getCategoryLabel "armor" item.system.category}}</th>
@@ -60,6 +61,7 @@
                         </th>
                     {{/if}}
                 </tr>
+            {{/ife}}
             {{/each}}
         </table>
     </div>
@@ -123,6 +125,7 @@
                 </tr>
             </thead>
             {{#each weapons as |item id|}}
+            {{#ife item.system.state "active"}}
                 <tr class="item draggable" data-item-id="{{_id}}">
                     <th>{{name}}</th>
                     <th>{{getCategoryLabel "weapon" item.system.category}}</th>
@@ -145,6 +148,7 @@
                         {{/if}}
                     </th>
                 </tr>
+                {{/ife}}
             {{/each}}
         </table>
     </div>
