--- a/templates/user_guide_fr.html
+++ b/templates/user_guide_fr.html
@@ -1,33 +1,39 @@
 <div class = "systemguide">
     <h1>Guide du système "Clé en Main" pour Foundry VTT"</h1>
     <h2>Introduction</h2>
+    <p>Bienvenue dans le système "Clé en main" pour Foundry.<br/>Ce petit guide vous en présentera les fonctionnalités et particularité.</p>
+
     <h2>Options</h2>
     <p> les options du système sont les suivantes:</p>
     <ul>
-        <li>Nombre de joueurs: cette valeur modifie les points d'endurance des PNJs et le maximum de points d'héroïsme des PJs.</li>
+        <li>Nombre de joueurs : cette valeur modifie les points d'endurance des PNJs et le maximum de points d'héroïsme des PJs.</li>
+        <li>Règles avancées : cette option active l'utilisation des règles avancées de clé en main : PnJs "élite", nouvelle prime/pénalités... Ces regles sont expliquées dans les chapitres correspondants</li>
     </ul>
     <h2>Feuilles de Personnage</h2>
     <p> Il y a deux types de personnages: les PJs et les PnJs. Lorsque vous créez un nouveau personnage , vous devez choisir son type.</p>
-    <p>Une fois créé, pour modifier le personnage vous devez d'abord déverrouiller sa feuille en cliquant sur l'icone <i class="fas fa-lock"></i>. Elle passe alors en mode édition.<br />
+    <p>Une fois créé, pour modifier le personnage vous devez d'abord déverrouiller sa feuille en cliquant sur l'icone <em class="fas fa-lock">&nbsp;</em> . Elle passe alors en mode édition.<br />
     Recliquez sur l'icone pour la verrouiller. Les seules modifications qui peuvent être faites sur une feuille vérouillée sont les points d'endurance courants, les points d'héroisme courants et les blessures.</p>
     <h4>Compétences</h4>
     <p>Les feuilles sont automatiquement créés avec une liste de compétences "par défaut". Certains jeux de la gamme clé en main peuvent parfois indiquer d'autres compétence, ou en enlever certaines. Vous pouvez supprimer ou ajouter librement des compétences lorsque la feuille est en mode édition. Vous pouvez aussi ajouter des spécialités en modifiant le nom de la compétence (par exemple "Connaissance: stratégie militaire".</p>
     <h4>Objets</h4>
-    <p>Vous pouvez ajouter les atouts, une arme, une armure ou un équipement de deux manières:</p>p>
+    <p>Vous pouvez ajouter les atouts, une arme, une armure ou un équipement de deux manières:</p>
         <ul>
             <li>Soit en créant un objet du bon type, puis en l'attribuant au personnage en faisant un glisser-déposer vers sa feuille,</li>
-            <li>Soit en les créant directement dans la section correspondante de la feuille d'un personnage en cliquant sur <i class="fas fa-lock"></i>.</li>
+            <li>Soit en les créant directement dans la section correspondante de la feuille d'un personnage en cliquant sur <em class="fas fa-plus">&nbsp;</em> </i>.</li>
         </ul>
         <p>Les objets apparaissent dans l'onglet "équipement". Lorsque la feuille est vérrouillée, un icône indique l'état de l'objet:</p>
         <ul>
-            <li><i class="fas fa-hand"></i> : L'objet est en main, l'armure est portée, on considère que l'object est actif.</li>
-            <li><i class="fas fa-backpack"></i> : L'objet est dans un sac ou une poche, il est rapidement utilisable.</li>
-            <li><i class="fas fa-home"></i> : L'objet est rangé, chez soit ou en tout autre endroit qui n'est pas immédiatement accessbile.</li>
+            <li><em class="fas fa-hand">&nbsp;</em> : L'objet est en main, l'armure est portée, on considère que l'object est actif.</li>
+            <li><em class="fas fa-backpack">&nbsp;</em> : L'objet est dans un sac ou une poche, il est rapidement utilisable.</li>
+            <li><em class="fas fa-home">&nbsp;</em> : L'objet est rangé, chez soit ou en tout autre endroit qui n'est pas immédiatement accessbile.</li>
         </ul>
         <p>Il suffit de cliquer sur l'icone pour modifier l'état d'un objet.</p>
-        <p>Seules les armes et armures marquées <li><i class="fas fa-hand"></i> apparaitront dans l'onglet combat.</p>
+        <p>Seules les armes et armures marquées <em class="fas fa-hand">&nbsp;</em> apparaitront dans l'onglet combat.</p>
     <h4>Jets d'attaque</h4>
-    <p>Pour pouvoir attaquer avec une arme, vous devez d'abord indiquer quelle compéétence sera utilisée avec elle. Pour cela, en mode édition, cliquez sur la compétence et faite un glisser-déposer vers la ligne de l'arme.</p>
+    <p>PJs: Pour pouvoir attaquer avec une arme, vous devez d'abord indiquer quelle compétence sera utilisée avec elle. Pour cela, en mode édition, cliquez sur la compétence, maintenez appuyé le bouton de souris et faites un glisser-déposer vers la ligne de l'arme.</p>
+    <p>PnJs: la valeur de la compétence doit être rentrée manuellement dans le champ "compétence".</p>
+    <h3>PnJ</h3>
+    <p>Les PnJ sont par défaut créés avec les 4 compétences de base. Vous pouvez en ajouter d'autres avec l'icone <em class="fas fa-plus">&nbsp;</em> .</p>
     <h4>Montrer le portrait</h4>
     <p>Cliquer sur le portrait d'un PnJ ouvre une fenêtre qui propose de montrer ce portrait à tous les joueurs et joueuses. Si validé, une fenetre s'affichera dans leurs écrans avec le portrait.</p>
 </div>
