:lipstick: layout feuille de perso

--- a/less/config.less
+++ b/less/config.less
@@ -28,6 +28,9 @@
 @combat-table-font-size: 0.9rem;
 @combat-table-font-weight: lighter;
 
+@pc-skill-font: "Modesto condensed";
+@pc-skill-font-size: 1.1rem;
+
 @npc-name-font: "Signika";
 @npc-name-color: @title-color;
 @npc-name-font-size: 2em;
