--- a/cleenmain.css
+++ b/cleenmain.css
@@ -68,7 +68,9 @@ input {
 .cleenmain.sheet.player .main .leftcolumn {
   display: flex;
   flex-direction: column;
-  min-width: 200px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  width: 235px;
   margin-right: 50px;
 }
 .cleenmain.sheet.player .main .leftcolumn .title-line {
@@ -86,6 +88,8 @@ input {
   display: flex;
   flex-direction: row;
   align-items: center;
+  font-family: "Modesto condensed";
+  font-size: 1.1rem;
 }
 .cleenmain.sheet.player .main .leftcolumn .skills .skill-line .skill-name {
   width: 70%;
@@ -545,6 +549,8 @@ input {
 .tab-bio .traits-block {
   font-family: "Merriweather";
   font-size: 0.7rem;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
 }
 .tab-bio .editor {
   min-height: 5em;
@@ -554,6 +560,26 @@ input {
 }
 .tab-bio .editor .tox.tox-tinymce {
   min-height: 10em;
+}
+.cleenmain.sheet.player .main .tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+}
+.cleenmain.sheet.player .main .tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+.cleenmain.sheet.player .main h1 .tooltiptext {
+  font-family: "Merriweather";
+  font-size: 0.7rem;
+  font-weight: normal;
+  text-transform: none;
 }
 .cleenmain.sheet.player .main .central .combat-tab {
   margin: 1em 0 0.5em 0;
@@ -568,13 +594,11 @@ input {
 .cleenmain.sheet.player .main .central .combat-tab .item-create {
   margin-left: auto;
 }
-.cleenmain.sheet.player .main .central .combat-tab .combat-domain-label {
-  margin: 1em 0 0 0;
-}
 .cleenmain.sheet.player .main .central .combat-tab .trainings-list {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding-bottom: 0.5em;
 }
 .cleenmain.sheet.player .main .central .combat-tab .trainings-list .trainings-group {
   display: flex;
@@ -594,6 +618,9 @@ input {
   flex-direction: row;
   flex-grow: 1;
 }
+.cleenmain.sheet.player .main .central .combat-tab .bonus-list .bonus-line .bonus-name {
+  padding: 0 0.5em 0 1em;
+}
 .cleenmain.sheet.player .main .central .combat-tab .bonus-list .bonus-line .bonus-text {
   background: #fffdfc;
   border: 1px solid #928e8e;
@@ -612,7 +639,7 @@ input {
 }
 .cleenmain.sheet.player .main .central .combat-tab .combat-group-label {
   font-style: italic;
-  padding: 1em 0 0.5em 0;
+  padding-right: 0.5em;
 }
 .notes-tab {
   display: flex;
