--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -53,7 +53,9 @@
         .leftcolumn {
             display: flex;
             flex-direction: column;
-            min-width: 200px;
+            flex-grow: 0;
+            flex-shrink: 0;
+            width: 235px;
             margin-right: 50px;
             .title-line{
                 display: flex;
@@ -69,6 +71,8 @@
                     display: flex;
                     flex-direction: row;
                     align-items: center;
+                    font-family: @pc-skill-font;
+                    font-size: @pc-skill-font-size;
                     .skill-name{       
                         width: 70%;
                     }
