--- a/templates/actor/tab/combat.html
+++ b/templates/actor/tab/combat.html
@@ -1,14 +1,14 @@
 <div class="combat-tab">
     <!-- PROTECTIONS PART -->
     <div class="title-line">
-        <h1 class="combat-domain-label">{{localize "CLEENMAIN.label.protections"}}  ( {{protection}} ) {{defenceModifier}}
+        <h1 class="combat-domain-label">{{localize "CLEENMAIN.label.protections"}}  ( <span class="tooltip">{{protection}}<span class="tooltiptext">{{localize "CLEENMAIN.tooltip.protection"}}</span></span> ) {{#if defenceModifier}}<span class="tooltip">{{defenceModifier}}<span class="tooltiptext">{{localize "CLEENMAIN.tooltip.defence_modifier"}}</span></span>{{/if}}
             {{#if unlocked}}
                 <a class="item-create right-icon" data-type="armor" title="{{localize 'CLEENMAIN.armor.add'}}"><i class="fas fa-plus"></i></a>
             {{/if}}
         </h1>
     </div>
-    <div class="combat-group-label">{{localize "CLEENMAIN.label.trainings"}}</div>
     <div class="trainings-list">
+        <div class="combat-group-label">{{localize "CLEENMAIN.label.trainings"}}</div>
         <div class="trainings-group">
             {{#if unlocked}}
                 <input class="checkbox" name="system.trainings.armors.war" type="checkbox" {{checked actorSystem.trainings.armors.war}}>
@@ -74,8 +74,8 @@
             {{/if}}
         </h1>
     </div>
-    <div class="combat-group-label">{{localize "CLEENMAIN.label.trainings"}}</div>
     <div class="trainings-list">
+        <div class="combat-group-label">{{localize "CLEENMAIN.label.trainings"}}</div>
         <div class="trainings-group">
             {{#if unlocked}}
                 <input class="checkbox" name="system.trainings.weapons.war" type="checkbox" {{checked actorSystem.trainings.weapons.war}}>
@@ -93,8 +93,8 @@
             <div class="trainings-name">{{localize "CLEENMAIN.weapon.category.heavy"}}</div>
         </div>
     </div>
-    <div class="combat-group-label">{{localize "CLEENMAIN.label.bonus"}}</div>
     <div class="bonus-list">
+        <div class="combat-group-label">{{localize "CLEENMAIN.label.bonus"}} :</div>
         <div class="bonus-line">            
             {{#if unlocked}}
                 <div class="bonus-name">{{localize "CLEENMAIN.label.melee"}}</div>
