:lipsticks: espaces trainings

--- a/less/tab/player-combat.less
+++ b/less/tab/player-combat.less
@@ -47,7 +47,7 @@
                         flex-direction: row;
                         flex-grow: 1;
                         .trainings-name{
-                            margin: 0 1em 0 .2em;
+                            margin: 0 .6em 0 .2em;
                         }
                     }
                 }
