--- a/templates/actor/tab/notes.html
+++ b/templates/actor/tab/notes.html
@@ -1,3 +1,3 @@
 <div class="notes-tab">
-    {{editor actorSystem.notebook target="system.notebook" button=true owner=owner editable=editable}}
+    {{editor notebookhtml target="system.notebook" button=true owner=owner editable=editable}}
 </div>
