--- a/templates/chat/roll-dialog.html
+++ b/templates/chat/roll-dialog.html
@@ -16,7 +16,7 @@
       {{#if isPlayer}}
         {{#if hasHeroism}}
         <div class="rollmodifier">
-          <label>{{localize "CLEENMAIN.dialog.heroism"}}</label><input type="checkbox" id="heroism" />
+          <label>{{#if heroismBonus1d6}}{{localize "CLEENMAIN.dialog.heroismBonus1d6"}}{{else}}{{localize "CLEENMAIN.dialog.heroism"}}{{/if}}</label><input type="checkbox" id="heroism" />
         </div>
         {{/if}}
       {{/if}}
