--- a/templates/item/weapon.html
+++ b/templates/item/weapon.html
@@ -14,16 +14,6 @@
                     <th>{{localize "CLEENMAIN.weapon.targets"}}</th>
                     <th>{{localize "CLEENMAIN.weapon.special"}}</th>
                     <th>{{localize "CLEENMAIN.weapon.zone"}}</th>
-                    <th>{{localize "CLEENMAIN.weapon.sixPlus"}}</th>
-                    {{#if hasNpcOwner}}
-                        <th>{{localize "CLEENMAIN.weapon.skillValueNpc"}}</th>
-                        {{#if (isSettingEnabled "advancedRules")}}
-                        <th>{{localize "CLEENMAIN.weapon.skillValueNpcElite"}}</th>
-                        {{/if}}
-                    {{else}}
-                        <th>{{localize "CLEENMAIN.weapon.skillName"}}</th>
-                    {{/if}}
-                </tr>
             </thead>
             <td>
                 <select name="system.category">
@@ -48,7 +38,24 @@
             <td><input name="system.targets" type="text" value="{{system.targets}}" data-dtype="Number"/></td>
             <td><input name="system.special" type="text" value="{{system.special}}"/></td>
             <td><input name="system.zone" type="text" value="{{system.zone}}" /></td>
-            <td><input name="system.sixPlus" type="checkbox" {{checked system.sixPlus}}/></td>
+            </table>
+            
+        <table>
+            <thead>
+                <tr>
+                    {{#if hasNpcOwner}}
+                        <th>{{localize "CLEENMAIN.weapon.skillValueNpc"}}</th>
+                        {{#if (isSettingEnabled "advancedRules")}}
+                        <th>{{localize "CLEENMAIN.weapon.skillValueNpcElite"}}</th>
+                        {{/if}}
+                    {{else}}
+                        <th>{{localize "CLEENMAIN.weapon.skillName"}}</th>
+                    {{/if}}
+                    <th>{{localize "CLEENMAIN.weapon.sixPlus"}}</th>
+                    <th>{{localize "CLEENMAIN.weapon.rollBonus"}}</th>
+                    <th>{{localize "CLEENMAIN.weapon.diceRerollNb"}}</th>
+                </tr>
+            </thead>
             {{#if hasNpcOwner}}
                 <td><input name="system.skillValue" type="number" value="{{system.skillValue}}"/></td>
                 {{#if (isSettingEnabled "advancedRules")}}
@@ -57,8 +64,10 @@
                 {{else}}
                     <td>{{system.skillName}}</td>
             {{/if}}
+            <td><input name="system.sixPlus" type="checkbox" {{checked system.sixPlus}}/></td>
+            <td><input name="system.skillBonus" type="text" value="{{system.skillBonus}}"/></td>
+            <td><input name="system.diceRerollNb" type="text" value="{{system.diceRerollNb}}"/></td>
             </table>
-            
             <div class="description">{{localize "CLEENMAIN.label.description"}}</div>
             {{editor system.description target="system.description" button=true owner=owner editable=editable}}
     </div>
